--- a/SuperHeroSights/src/main/resources/templates/editOrganization.html
+++ b/SuperHeroSights/src/main/resources/templates/editOrganization.html
@@ -103,10 +103,10 @@
         <!-- End main body -->
 
         <!-- Optional JavaScript -->
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB0rh7k_rSsOV3XcUmvYI2XPBC5lcS2umc&libraries=places"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAbEujuk_8_RJ1cajrTGkdz4yi0nqw2KXo&libraries=places"></script>
         <script type="text/javascript">
-                    google.maps.event.addDomListener(window, 'load', intilize);
-                    function intilize(){
+                    google.maps.event.addDomListener(window, 'load', initialize);
+                    function initialize(){
                         var autocomplete = new google.maps.places.Autocomplete(document.getElementById('address'));
 
                         google.maps.event.addListener(autocomplete, 'place_changed', function() {
