--- a/SuperHeroSights/src/main/resources/templates/organization.html
+++ b/SuperHeroSights/src/main/resources/templates/organization.html
@@ -123,21 +123,28 @@
         <!-- End main body -->
 
         <!-- Optional JavaScript -->
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB0rh7k_rSsOV3XcUmvYI2XPBC5lcS2umc&libraries=places"></script>
         <script type="text/javascript">
-                    google.maps.event.addDomListener(window, 'load', intilize);
-                    function intilize(){
-                        var autocomplete = new google.maps.places.Autocomplete(document.getElementById('address'));
+            function initialize() {
+                var autocomplete = new google.maps.places.Autocomplete(document.getElementById('address'));
 
-                        google.maps.event.addListener(autocomplete, 'place_changed', function() {
+                autocomplete.addListener('place_changed', function() {
+                    var place = autocomplete.getPlace();
+                    if (!place.geometry) {
+                        // Handle error or invalid input appropriately
+                        console.log("Autocomplete's returned place contains no geometry");
+                        return;
+                    }
 
-                            var places = autocomplete.getPlace();
-                            var address = places.formatted_address;
+                    var address = place.formatted_address || 'No address available';
+                    document.getElementById('address').value = address;
+                });
+            }
 
-                            document.getElementById('address').innerHTML = address;
-                        });
-                    };
+            window.addEventListener('load', initialize);
         </script>
+
+        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAbEujuk_8_RJ1cajrTGkdz4yi0nqw2KXo&libraries=places&callback=initialize"></script>
+
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
